--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Cebarnsley/react-food-chooser"
+  "homepage": "https://github.com/Cebarnsley/react-food-chooser",
   "name": "react-food",
   "version": "0.1.0",
   "private": true,
