--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "gh-pages": "^3.1.0",
-    "jest": "^26.6.3"
+    "gh-pages": "^3.1.0"
   }
 }
